terraform/modules/network/db-subnet.tf
resource "azurerm_subnet" "db" {
  name                 = "db-subnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = [var.subnet_cidrs["db"]]

  private_link_service_network_policies_enabled = false
}
